@@ -1,6 +1,7 @@
 vengi (0.0.9.0-1) UNRELEASED; urgency=low
 
-  * Empty
+  * General:
+  * Added obj texcoord export sampling the borders of the texel
 
  -- Martin Gerhardy <martin.gerhardy@gmail.com>  Wed, 30 Sep 2020 22:38:13 +0200
 
